config/tokendings/base/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: tokendings-authz-policy
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/jwker-system/sa/jwker
      to:
        - operation:
            methods:
              - POST
              - GET
            paths:
              - /registration/client
        - operation:
            methods:
              - DELETE
              - GET
            paths:
              - /registration/client/{*}
    - from:
        - source:
            notPrincipals:
              - cluster.local/ns/istio-gateways/sa/*
      to:
        - operation:
            methods:
              - POST
            paths:
              - /token
        - operation:
            methods:
              - GET
            paths:
              - /.well-known/oauth-authorization-server
              - /jwks
  selector:
    matchLabels:
      app: tokendings
